--- a/Academic Writing Slides.Rmd
+++ b/Academic Writing Slides.Rmd
@@ -129,7 +129,7 @@ Camille walk through example of structured article and how she might set up the 
 
 ## Which evidence do I cite?
 
-![](pyramid.PNG)
+<img src="img/pyramid.PNG" width="800" />![](img/pyramid.PNG)
 
 ---
 
@@ -150,7 +150,7 @@ this is useful for literature review as you are building ideas, but also for sav
 ---
 
 # Journal Article Publishing Timeline
-![](timeline.JPG)
+<img src="img/timeline.png" width="800" />![](img/timeline.JPG)
 ---
 
 # Formulating Research Questions and Topics
